# RodelIDE

./: CMakeLists.txt
simple-ide/: CMakeLists.txt
simple-ide/src/: MainWindow.cpp
src/: AutoBracketTextEdit.cpp  AutoBracketTextEdit.h  MainWindow.cpp  MainWindow.h  config.cfg
